[UPDATE] refactor DocumentType to DocumentCategory and adjust openapi.yml
