# Sources/GoogleCloudStorage/Adapter/ApiComponents+FileContentType.swift
@@ -1,13 +1,58 @@
+import FileStorageCore
+
 extension Components.Parameters.fileContentType {
-    
-    var wrapped: (fileContentType: String, ext: String) {
+    var contentType: ContentType {
         switch self {
         case .jpeg:
-            ("image/jpeg", "jpg")
+            .jpeg
         case .pdf:
-            ("application/pdf", "pdf")
+            .pdf
         case .png:
-            ("image/png", "png")
+            .png
+        }
+    }
+}
+
+
+extension Components.Parameters.quotingContextDocumentType {
+    var documentType: QuotingContextDocumentCategory {
+        get{
+            switch self{
+            case .quotingProof:
+                .quotingProof
+            case .replyForm:
+                .replyForm
+            }
+        }
+    }
+}
+
+extension Components.Parameters.auditContextDocumentType {
+    var documentType: AuditContextDocumentCategory {
+        get{
+            switch self{
+            case .businessClientRiskControlDocument:
+                .businessClientRiskControlDocument
+            case .businessTaxReturnDocument401:
+                .businessTaxReturnDocument(._401)
+            case .financialComplianceAuditDocument:
+                .financialComplianceAuditDocument
+            case .profitseekingEnterpriseAnnualIncomeTaxReturnDocument:
+                .financialComplianceAuditDocument
+            case .taxComplianceAuditDocument:
+                .taxComplianceAuditDocument
+            }
+        }
+    }
+}
+
+extension Components.Parameters.customerRelationshipContextDocumentType {
+    var documentType: CustomerRelationshipContextDocumentCategory {
+        get{
+            switch self{
+            case .newBusinessClientRiskControlDocument:
+                .newBusinessClientRiskControlDocument
+            }
         }
     }
 }
