# Sources/GoogleCloudStorage/Adapter/ApiHandler.swift
@@ -11,9 +11,42 @@ package struct ApiHandler: APIProtocol {
     }
     
     package func uploadFromQuotingContext(_ input: Operations.uploadFromQuotingContext.Input) async throws -> Operations.uploadFromQuotingContext.Output {
-        let quotingCaseId = input.path.quotingCaseId
-        let fileContentType = input.headers.fileContentType.wrapped.fileContentType
-        let ext = input.headers.fileContentType.wrapped.ext
+        let contentType = input.headers.fileContentType.contentType
+        
+        var fileData: Data?
+        
+        switch input.body {
+        case let .multipartForm(multipartBody):
+            for try await part in multipartBody {
+                switch part {
+                case let .file(filePayload):
+                    fileData = try await filePayload.payload.body.reduce(into: Data()) { partialResult, byteChunk in
+                        partialResult.append(contentsOf: byteChunk.map(\.self))
+                    }
+                case .undocumented(_):
+                    continue
+                }
+            }
+        }
+        guard let fileData else {
+            throw UploadError.invalidFileData
+        }
+
+        let documentId = UUID().uuidString
+        var mediaLink: String?
+        do {
+            
+            let filePath = input.path.quotingContextDocumentType.documentType.path(documentId: documentId, contentType: contentType)
+            mediaLink = try await self.uploader.upload(data: fileData, path: filePath, contentType: contentType.rawValue, limit: .mb(10))
+        } catch {
+            return .serviceUnavailable(.init(body: .json(.init(stringLiteral: "\(error)"))))
+        }
+        return .ok(.init(body: .json(.init(documentId: documentId, mediaLink: mediaLink))))
+    }
+    
+    package func uploadFromCustomerRelationshipContext(_ input: Operations.uploadFromCustomerRelationshipContext.Input) async throws -> Operations.uploadFromCustomerRelationshipContext.Output {
+        let customerId = input.path.customerId
+        let contentType = input.headers.fileContentType.contentType
         
         var fileData: Data?
         switch input.body {
@@ -36,45 +69,8 @@ package struct ApiHandler: APIProtocol {
         let documentId = UUID().uuidString
         var mediaLink: String?
         do {
-            let filePath = StoragePathGenerator.generateQuotingContextPath(quotingCaseId: quotingCaseId, documentId: documentId, ext: ext)
-            mediaLink = try await self.uploader.upload(data: fileData, path: filePath, contentType: fileContentType, limit: .mb(10))
-        } catch {
-            return .serviceUnavailable(.init(body: .json(.init(stringLiteral: "\(error)"))))
-        }
-        return .ok(.init(body: .json(.init(documentId: documentId, mediaLink: mediaLink))))
-    }
-    
-    package func uploadFromCustomerRelationshipContext(_ input: Operations.uploadFromCustomerRelationshipContext.Input) async throws -> Operations.uploadFromCustomerRelationshipContext.Output {
-        let customerId = input.path.customerId
-        let fileContentType = input.headers.fileContentType.wrapped.fileContentType
-        let ext = input.headers.fileContentType.wrapped.ext
-        
-        var fileData: Data?
-        switch input.body {
-        case let .multipartForm(multipartBody):
-            for try await part in multipartBody {
-                switch part {
-                case let .file(filePayload):
-                    fileData = try await filePayload.payload.body.reduce(into: Data()) { partialResult, byteChunk in
-                        partialResult.append(contentsOf: byteChunk.map(\.self))
-                    }
-                case .undocumented(_):
-                    continue
-                }
-            }
-        }
-        guard let fileData else {
-            throw UploadError.invalidFileData
-        }
-        guard let documentType = DocumentType(rawValue: input.path.customerRelationshipContextDocumentType.rawValue) else {
-            throw UploadError.invalidDocumentType(value: input.path.customerRelationshipContextDocumentType.rawValue)
-        }
-        
-        let documentId = UUID().uuidString
-        var mediaLink: String?
-        do {
-            let filePath = StoragePathGenerator.generateCustomerRelationshipContextPath(customerId: customerId, documentType: documentType, documentId: documentId, ext: ext)
-            mediaLink = try await self.uploader.upload(data: fileData, path: filePath, contentType: fileContentType, limit: .mb(10))
+            let filePath = input.path.customerRelationshipContextDocumentType.documentType.path(customerId: customerId, documentId: documentId, contentType: contentType)
+            mediaLink = try await self.uploader.upload(data: fileData, path: filePath, contentType: contentType.rawValue, limit: .mb(10))
         } catch {
             return .serviceUnavailable(.init(body: .json(.init(stringLiteral: "\(error)"))))
         }
@@ -83,8 +79,7 @@ package struct ApiHandler: APIProtocol {
     
     package func uploadFromAuditContext(_ input: Operations.uploadFromAuditContext.Input) async throws -> Operations.uploadFromAuditContext.Output {
         let customerId = input.path.customerId
-        let fileContentType = input.headers.fileContentType.wrapped.fileContentType
-        let ext = input.headers.fileContentType.wrapped.ext
+        let contentType = input.headers.fileContentType.contentType
         
         var fileData: Data?
         switch input.body {
@@ -100,17 +95,17 @@ package struct ApiHandler: APIProtocol {
                 }
             }
         }
+        
         guard let fileData else {
             throw UploadError.invalidFileData
         }
-        guard let documentType = DocumentType(rawValue: input.path.auditContextDocumentType.rawValue) else {
-            throw UploadError.invalidDocumentType(value: input.path.auditContextDocumentType.rawValue)
-        }
+        
+        
         let documentId = UUID().uuidString
         var mediaLink: String?
         do {
-            let filePath = StoragePathGenerator.generateAuditContextPath(customerId: customerId, documentType: documentType, documentId: documentId, ext: ext)
-            mediaLink = try await self.uploader.upload(data: fileData, path: filePath, contentType: fileContentType, limit: .mb(10))
+            let filePath = input.path.auditContextDocumentType.documentType.path(customerId: customerId, documentId: documentId, contentType: contentType)
+            mediaLink = try await self.uploader.upload(data: fileData, path: filePath, contentType: contentType.rawValue, limit: .mb(10))
         } catch {
             return .serviceUnavailable(.init(body: .json(.init(stringLiteral: "\(error)"))))
         }
